Criado Cargo e Presidente

--- a/PrismaWEB.MVC/Views/Shared/_Layout.cshtml
+++ b/PrismaWEB.MVC/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
+                    <li>@Html.ActionLink("Candidatos", "Index", "Candidato")</li>
+                    <li>@Html.ActionLink("Cargos", "Index", "Cargos")</li>
                     <li>@Html.ActionLink("Produtos", "Index", "Produtos")</li>
                 </ul>
             </div>
