--- a/PrismaWEB.MVC/Views/Cargos/Index.cshtml
+++ b/PrismaWEB.MVC/Views/Cargos/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProjetoModeloDDD.MVC.ViewModels.CandidatoViewModel>
+﻿@model IEnumerable<ProjetoModeloDDD.MVC.ViewModels.CargoViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -13,16 +13,10 @@
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Nome)
-        </th>        
-        <th>
-            @Html.DisplayNameFor(model => model.Ativo)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>       
-        <th>
-            @Html.DisplayNameFor(model => model.TelefoneMovel)
-        </th>        
+            @Html.DisplayNameFor(model => model.Descricao)
+        </th>
         <th></th>
     </tr>
 
@@ -32,13 +26,7 @@
             @Html.DisplayFor(modelItem => item.Nome)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Ativo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TelefoneMovel)
+            @Html.DisplayFor(modelItem => item.Descricao)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
