--- a/PrismaWEB.MVC/Views/Shared/_Layout.cshtml
+++ b/PrismaWEB.MVC/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Candidatos", "Index", "Candidato")</li>
                     <li>@Html.ActionLink("Cargos", "Index", "Cargos")</li>
-                    <li>@Html.ActionLink("Produtos", "Index", "Produtos")</li>
+                    <li>@Html.ActionLink("Leis", "Index", "Leis")</li>
                 </ul>
             </div>
         </div>
