--- a/PrismaWEB.MVC/Views/Shared/_Layout.cshtml
+++ b/PrismaWEB.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -20,6 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Testes", "Index", "Testes")</li>
                     <li>@Html.ActionLink("Candidatos", "Index", "Candidato")</li>
                     <li>@Html.ActionLink("Cargos", "Index", "Cargos")</li>
                     <li>@Html.ActionLink("Leis", "Index", "Leis")</li>
@@ -40,3 +41,4 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
