--- a/PrismaWEB.MVC/Views/Candidato/Index.cshtml
+++ b/PrismaWEB.MVC/Views/Candidato/Index.cshtml
@@ -13,39 +13,40 @@
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Nome)
-        </th>        
         <th>
-            @Html.DisplayNameFor(model => model.Ativo)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.Email)
-        </th>       
+        <th>
         <th>
             @Html.DisplayNameFor(model => model.TelefoneMovel)
-        </th>        
+        <th>
+        <th>
+            @Html.DisplayNameFor(model => model.Pais_Id)
+        <th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ativo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TelefoneMovel)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nome)
+            <td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            <td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TelefoneMovel)
+            <td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Pais.Nome)
+            <td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            </td>
+        </tr>
+    }
 
 </table>
