Correção view Candidato e produto

--- a/PrismaWEB.MVC/Views/Candidato/Create.cshtml
+++ b/PrismaWEB.MVC/Views/Candidato/Create.cshtml
@@ -6,16 +6,15 @@
 
 <h2>Create</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>CandidatoViewModel</h4>
+        <h4>ClienteViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
@@ -23,7 +22,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control" } })
@@ -31,7 +30,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Cpf, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control" } })
@@ -39,25 +38,15 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Foto, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Ativo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Ativo)
-                    @Html.ValidationMessageFor(model => model.Ativo, "", new { @class = "text-danger" })
-                </div>
+                @Html.EditorFor(model => model.Ativo)
+                @Html.ValidationMessageFor(model => model.Ativo, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
@@ -65,7 +54,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.TelefoneFixo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TelefoneFixo, new { htmlAttributes = new { @class = "form-control" } })
@@ -73,7 +62,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.TelefoneMovel, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TelefoneMovel, new { htmlAttributes = new { @class = "form-control" } })
@@ -81,47 +70,47 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Pais_Id, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Pais_Id, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("Pais_Id", String.Empty)
                 @Html.ValidationMessageFor(model => model.Pais_Id, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Estado_Id, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Estado_Id, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("Estado_Id", String.Empty)
                 @Html.ValidationMessageFor(model => model.Estado_Id, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Cidade_Id, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Cidade_Id, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("Cidade_Id", String.Empty)
                 @Html.ValidationMessageFor(model => model.Cidade_Id, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Bairro_Id, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Bairro_Id, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("Bairro_Id", String.Empty)
                 @Html.ValidationMessageFor(model => model.Bairro_Id, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Logradouro_Id, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Logradouro_Id, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("Logradouro_Id", String.Empty)
                 @Html.ValidationMessageFor(model => model.Logradouro_Id, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Cep, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Cep, new { htmlAttributes = new { @class = "form-control" } })
@@ -129,7 +118,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Numero, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Numero, new { htmlAttributes = new { @class = "form-control" } })
@@ -137,7 +126,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form - group">
             @Html.LabelFor(model => model.Complemento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Complemento, new { htmlAttributes = new { @class = "form-control" } })
