--- a/PrismaWEB.MVC/Views/Leis/Edit.cshtml
+++ b/PrismaWEB.MVC/Views/Leis/Edit.cshtml
@@ -1,19 +1,22 @@
 ﻿@model ProjetoModeloDDD.MVC.ViewModels.LeiViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+
+<h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>ClienteViewModel</h4>
+    <div class="form-group">
+        <h4>Lei</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Lei)
+
         <div class="form - group">
             @Html.LabelFor(model => model.Numero, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -56,12 +59,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
