--- a/PrismaWEB.MVC/Views/SCadastros/AlterarSenha.cshtml
+++ b/PrismaWEB.MVC/Views/SCadastros/AlterarSenha.cshtml
@@ -12,7 +12,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        @Html.HiddenFor(model => model.Login)
+        @Html.Hidden("Login", new { value = "login" })
 
         <div class="form-group">
             @Html.LabelFor(model => model.SenhaAnterior, htmlAttributes: new { @class = "control-label col-md-2" })
