--- a/PrismaWEB.MVC/Views/Shared/_Layout.cshtml
+++ b/PrismaWEB.MVC/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta name="author" content="Leonardo Vanelli">
 
     <link rel="shortcut icon" href="~/generico2.png" type="image/x-icon" />
-    <title>@ViewBag.Title - My Genric Application</title>
+    <title>@ViewBag.Title - Genérico</title>
     <!-- CSS -->
     @Styles.Render("~/bundles/css")
     <link href="~/Content/fontawesome-free-5.4.1-web/css/all.min.css" rel="stylesheet" />
